Changelog
=========

Version dev
  * code refactoring
  * remove deprecated recommonmark
  * remove deprecated webkit2 4.0
  * Neovim support (formiko-vim)
    - new vte 2.91 dependency
  * JSON preview: add collapsible folding view
  * JSON preview: add json path filter


Version 1.5.0

  * fix local url with href anchor
  * M2R convertor support for another MarkDown parsing way
  * check_version command for version check in all files
    in repository
  * bad parser in config fix
  * desktop icon fix
  * period check/save fix
  * quit dialog fix
  * dialogs use `Document` word
  * tab width fix
  * search error fix (issue #7)
  * searching refactoring
  * don't crash application when vim window failed or formiko icon not found
  * right working with formatting and extensions by mime type
  * right margin settings (issue 36)
  * dark theme renderer support (issue #18)
  * tab_width from ini config file fix (issue #28)
  * upgrade SourceView to version 4

Version 1.4.3

  * cz.zeropage.Formiko application ID fix

Version 1.4.2

  * save_as window fix
  * AppStream metadata

Version 1.4.0

  * man pages
  * words and characters count live info
  * Recommonmark (MarkDown) support with colored code
  * change preview - set paned position fix
  * GTK Warning fix (debian bug #933622)
  * SearchBar and searching text in editor
  * searching text in preview
  * creating backup file before write changes to new one
  * refresh preview action / button
  * opening links in system from preview, known file types open in new formiko
    window
  * preview auto scroll
  * fixing positing in preview only mode
  * preview/editor/both with shortcuts and store in cache
  * edited file change time check

Version 1.3.0

  * spell check support
  * display white chars switch
  * highlighting current line switch
  * printing document output
  * shortcuts dialog

Version 1.2.1

  * fix SIGSEGV - gui threads conflict
  * fix window cache settings